--- a/.github/workflows/bestagent-elera.yml
+++ b/.github/workflows/bestagent-elera.yml
@@ -11,34 +11,25 @@ env:
 
 jobs:
   tests:
-    name: Run Tests
+    name: Run Tests and Linting
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: Cache Python dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install -r backend/requirements.txt
-          pip install flake8  # Только flake8 для проверки стиля
+          pip install flake8  # Или другие линтеры
 
       - name: Run linting
         run: |
-          flake8 backend/  # Только проверка синтаксиса
+          flake8 backend/  # Проверка только бэкенда
 
   build_and_push_to_docker_hub:
     name: Build and Push Docker Images
@@ -46,7 +37,7 @@ jobs:
     needs: tests
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -61,10 +52,7 @@ jobs:
           file: backend/Dockerfile
           tags: |
             ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.PROJECT_NAME }}-backend:latest
-            ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.PROJECT_NAME }}-backend:${{ github.sha }}
           push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
 
       - name: Build and push frontend
         uses: docker/build-push-action@v4
@@ -73,12 +61,34 @@ jobs:
           file: frontend/Dockerfile
           tags: |
             ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.PROJECT_NAME }}-frontend:latest
-            ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.PROJECT_NAME }}-frontend:${{ github.sha }}
           push: true
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
 
   deploy:
     name: Deploy to Beget
     runs-on: ubuntu-latest
-    needs: build_and_push_to
+    needs: build_and_push_to_docker_hub
+    steps:
+      - name: SSH and deploy
+        uses: appleboy/ssh-action@v1
+        with:
+          host: ${{ secrets.BEGET_HOST }}  # Например, ssh.beget.com
+          username: ${{ secrets.BEGET_USERNAME }}  # Ваш логин Beget
+          key: ${{ secrets.BEGET_SSH_KEY }}  # Приватный SSH-ключ
+          script: |
+            cd ~/www/${{ env.DOMAIN }}/public_html/
+            
+            # Остановка текущих контейнеров
+            docker-compose down || true
+            
+            # Получение новых образов
+            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.PROJECT_NAME }}-backend:latest
+            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.PROJECT_NAME }}-frontend:latest
+            
+            # Запуск контейнеров
+            docker-compose up -d
+            
+            # Применение миграций (если нужно)
+            docker-compose exec backend python manage.py migrate --noinput
+            
+            # Перезагрузка Nginx на Beget
+            sudo /etc/init.d/nginx reload
