add workflows and delete errors testin[seressе

--- a/.github/workflows/bestagent-elera.yml
+++ b/.github/workflows/bestagent-elera.yml
@@ -79,6 +79,7 @@ jobs:
           script: |
             echo "--> Переходим в папку проекта"
             cd ~/www/bestagent-elera.ru/public_html/
+            git pull origin main
             
             echo "--> Останавливаем текущие контейнеры"
             docker-compose down || true
