--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -18,9 +18,6 @@ services:
       - "8000:8000"
     volumes:
       - static_value:/app/backend_static/  # ✅ Верно для статики
-      - media_value:/app/backend_media/    # 🛑 ИСПРАВЬТЕ ЭТО! (было /app/)
-    environment:
-      - MEDIA_ROOT=/app/backend_media/
 
   nginx:
     image: nginx:1.21.3-alpine
@@ -30,7 +27,7 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - frontend_build:/usr/share/nginx/html/
-      - static_value:/var/html/backend_static/  # 🛑 ИСПРАВЬТЕ ЭТО! (было /backend_media/backend_media)
+      - static_value:/var/html/backend_static/
     restart: always
     depends_on:
       - backend
