--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,8 +1,47 @@
+# version: '3.8'
+
+# services:
+#   frontend:
+#     image: bestagent/bestagent-elera-frontend:latest
+#     ports:
+#       - "3000:3000"
+#     volumes:
+#       - frontend_build:/app/result_build/
+#     environment:
+#       NODE_ENV: production
+#     restart: always
+
+#   backend:
+#     image: bestagent/bestagent-elera-backend:latest
+#     restart: always
+#     ports:
+#       - "8000:8000"
+#     volumes:
+#       - static_value:/app/backend_static/  # ✅ Верно для статики
+
+#   nginx:
+#     image: nginx:1.21.3-alpine
+#     ports:
+#       - "80:80"
+#       - "443:443"
+#     volumes:
+#       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+#       - frontend_build:/usr/share/nginx/html/
+#       - static_value:/var/html/backend_static/
+#     restart: always
+#     depends_on:
+#       - backend
+#       - frontend
+# volumes:
+#   postgres_data:
+#   frontend_build:
+#   static_value:
+#   media_value:
 version: '3.8'
 
 services:
   frontend:
-    image: bestagent/bestagent-elera-frontend:latest
+    image: ${{ secrets.DOCKER_HUB_USERNAME }}/bestagent-elera-frontend:latest
     ports:
       - "3000:3000"
     volumes:
@@ -12,12 +51,24 @@ services:
     restart: always
 
   backend:
-    image: bestagent/bestagent-elera-backend:latest
+    image: ${{ secrets.DOCKER_HUB_USERNAME }}/bestagent-elera-backend:latest
     restart: always
     ports:
       - "8000:8000"
     volumes:
-      - static_value:/app/backend_static/  # ✅ Верно для статики
+      - static_value:/app/backend_static/
+    environment:
+      DATABASE_URL: postgres://postgre:Restart.1996@db:5432/bestagent-elera  # Замените на свои данные
+      SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+
+  db:
+    image: postgres:13
+    environment:
+      POSTGRES_USER: postgre
+      POSTGRES_PASSWORD: Restart.1996
+      POSTGRES_DB: bestagent-elera
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
   nginx:
     image: nginx:1.21.3-alpine
@@ -28,12 +79,11 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - frontend_build:/usr/share/nginx/html/
       - static_value:/var/html/backend_static/
-    restart: always
     depends_on:
       - backend
       - frontend
+
 volumes:
   postgres_data:
   frontend_build:
   static_value:
-  media_value:
