--- a/.github/workflows/bestagent-elera.yml
+++ b/.github/workflows/bestagent-elera.yml
@@ -65,54 +65,40 @@ jobs:
             ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.PROJECT_NAME }}-frontend:latest
           push: true
   deploy:
-    name: Deploy to Beget
-    runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+  name: Deploy to Beget
+  runs-on: ubuntu-latest
+  needs: build_and_push_to_docker_hub
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Install rsync
-        run: sudo apt-get update && sudo apt-get install -y rsync
+    - name: Prepare SSH
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        echo "Host fabia.beget.com" >> ~/.ssh/config
+        echo "  User ${{ secrets.BEGET_USERNAME }}" >> ~/.ssh/config
+        echo "  IdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
+        chmod 600 ~/.ssh/config
 
-      - name: Copy files to server
-        run: |
-          rsync -avz --delete \
-            -e "ssh -o StrictHostKeyChecking=no" \
-            ./ ${{ secrets.BEGET_USERNAME }}@${{ secrets.BEGET_HOST }}:~/bestagent-elera.ru/public_html/PROJECT_ELERA/
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+    - name: Rsync files
+      run: |
+        rsync -avz --delete \
+          -e "ssh -o StrictHostKeyChecking=no" \
+          ./ ${{ secrets.BEGET_USERNAME }}@ibrokhqk.beget.com:/home/i/ibrokhqk/bestagent-elera.ru/public_html/PROJECT_ELERA/
 
-      - name: SSH and deploy
-        uses: appleboy/ssh-action@v1
-        with:
-          host: ${{ secrets.BEGET_HOST }}
-          username: ${{ secrets.BEGET_USERNAME }}
-          password: ${{ secrets.BEGET_PASSWORD }}
-          script: |
-            set -e
-            echo "=== Installing Docker Compose ==="
-            sudo curl -L "https://github.com/docker/compose/releases/download/v2.23.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-            sudo chmod +x /usr/local/bin/docker-compose
-
-            echo "=== Starting deployment ==="
-            cd ~/bestagent-elera.ru/public_html/PROJECT_ELERA/infra/
-            
-            echo "=== Stopping old containers ==="
-            docker-compose down -v || true
-            
-            echo "=== Pulling new images ==="
-            docker-compose pull
-            
-            echo "=== Starting containers ==="
-            docker-compose up -d --build
-            
-            echo "=== Running migrations ==="
-            docker-compose exec -T backend python manage.py migrate --noinput || echo "⚠️ Migrations failed"
-            
-            echo "=== Collecting static ==="
-            docker-compose exec -T backend python manage.py collectstatic --no-input --clear || echo "⚠️ Static collection failed"
-            
-            echo "✅ Deployment completed"
-
+    - name: Deploy via SSH
+      uses: appleboy/ssh-action@v1
+      with:
+        host: fabia.beget.com
+        username: ${{ secrets.BEGET_USERNAME }}
+        password: ${{ secrets.BEGET_PASSWORD }}
+        script: |
+          cd /home/i/ibrokhqk/bestagent-elera.ru/public_html/PROJECT_ELERA/infra/
+          docker-compose down
+          docker-compose pull
+          docker-compose up -d --build
+          docker-compose exec backend python manage.py migrate
+          docker-compose exec backend python manage.py collectstatic --noinput
             
