--- a/.github/workflows/bestagent-elera.yml
+++ b/.github/workflows/bestagent-elera.yml
@@ -65,40 +65,40 @@ jobs:
             ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.PROJECT_NAME }}-frontend:latest
           push: true
   deploy:
-  name: Deploy to Beget
-  runs-on: ubuntu-latest
-  needs: build_and_push_to_docker_hub
-  steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    name: Deploy to Beget
+    runs-on: ubuntu-latest
+    needs: build_and_push_to_docker_hub
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Prepare SSH
-      run: |
-        mkdir -p ~/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-        chmod 600 ~/.ssh/id_rsa
-        echo "Host fabia.beget.com" >> ~/.ssh/config
-        echo "  User ${{ secrets.BEGET_USERNAME }}" >> ~/.ssh/config
-        echo "  IdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
-        chmod 600 ~/.ssh/config
+      - name: Prepare SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          echo "Host fabia.beget.com" >> ~/.ssh/config
+          echo "  User ${{ secrets.BEGET_USERNAME }}" >> ~/.ssh/config
+          echo "  IdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
+          chmod 600 ~/.ssh/config
 
-    - name: Rsync files
-      run: |
-        rsync -avz --delete \
-          -e "ssh -o StrictHostKeyChecking=no" \
-          ./ ${{ secrets.BEGET_USERNAME }}@ibrokhqk.beget.com:/home/i/ibrokhqk/bestagent-elera.ru/public_html/PROJECT_ELERA/
+      - name: Rsync files
+        run: |
+          rsync -avz --delete \
+            -e "ssh -o StrictHostKeyChecking=no" \
+            ./ ${{ secrets.BEGET_USERNAME }}@ibrokhqk.beget.tech:/home/i/ibrokhqk/bestagent-elera.ru/public_html/PROJECT_ELERA/
 
-    - name: Deploy via SSH
-      uses: appleboy/ssh-action@v1
-      with:
-        host: fabia.beget.com
-        username: ${{ secrets.BEGET_USERNAME }}
-        password: ${{ secrets.BEGET_PASSWORD }}
-        script: |
-          cd /home/i/ibrokhqk/bestagent-elera.ru/public_html/PROJECT_ELERA/infra/
-          docker-compose down
-          docker-compose pull
-          docker-compose up -d --build
-          docker-compose exec backend python manage.py migrate
-          docker-compose exec backend python manage.py collectstatic --noinput
+      - name: Deploy via SSH
+        uses: appleboy/ssh-action@v1
+        with:
+          host: fabia.beget.com
+          username: ${{ secrets.BEGET_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            cd /home/i/ibrokhqk/bestagent-elera.ru/public_html/PROJECT_ELERA/
+            docker-compose -f infra/docker-compose.yml down
+            docker-compose -f infra/docker-compose.yml pull
+            docker-compose -f infra/docker-compose.yml up -d --build
+            docker-compose -f infra/docker-compose.yml exec backend python manage.py migrate
+            docker-compose -f infra/docker-compose.yml exec backend python manage.py collectstatic --noinput
             
