--- a/.github/workflows/bestagent-elera.yml
+++ b/.github/workflows/bestagent-elera.yml
@@ -65,40 +65,45 @@ jobs:
             ${{ secrets.DOCKER_HUB_USERNAME }}/${{ env.PROJECT_NAME }}-frontend:latest
           push: true
   deploy:
-    name: Deploy to Beget
+    name: Deploy to Production
+    needs: build_and_push
     runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Prepare SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          echo "Host fabia.beget.com" >> ~/.ssh/config
-          echo "  User ${{ secrets.BEGET_USERNAME }}" >> ~/.ssh/config
-          echo "  IdentityFile ~/.ssh/id_rsa" >> ~/.ssh/config
-          chmod 600 ~/.ssh/config
-
-      - name: Rsync files
-        run: |
-          rsync -avz --delete \
-            -e "ssh -o StrictHostKeyChecking=no" \
-            ./ ${{ secrets.BEGET_USERNAME }}@ibrokhqk.beget.tech:/home/i/ibrokhqk/bestagent-elera.ru/public_html/PROJECT_ELERA/
-
-      - name: Deploy via SSH
+      - name: SSH Deployment
         uses: appleboy/ssh-action@v1
         with:
-          host: fabia.beget.com
+          host: ${{ secrets.BEGET_HOST }}
           username: ${{ secrets.BEGET_USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          key: ${{ secrets.BEGET_SSH_KEY }}
           script: |
-            cd /home/i/ibrokhqk/bestagent-elera.ru/public_html/PROJECT_ELERA/
-            docker-compose -f infra/docker-compose.yml down
-            docker-compose -f infra/docker-compose.yml pull
-            docker-compose -f infra/docker-compose.yml up -d --build
-            docker-compose -f infra/docker-compose.yml exec backend python manage.py migrate
-            docker-compose -f infra/docker-compose.yml exec backend python manage.py collectstatic --noinput
+            set -e
+            echo "=== Starting deployment ==="
+            cd $COMPOSE_DIR
             
+            echo "=== Pulling new images ==="
+            docker-compose pull
+            
+            echo "=== Stopping old containers ==="
+            docker-compose down
+            
+            echo "=== Cleaning old images ==="
+            docker image prune -a -f --filter "until=24h"
+            
+            echo "=== Starting new containers ==="
+            docker-compose up -d --build
+            
+            echo "=== Waiting for services to start (30s) ==="
+            sleep 30
+            
+            echo "=== Applying database migrations ==="
+            docker-compose exec -T backend python manage.py migrate --noinput
+            
+            echo "=== Collecting static files ==="
+            docker-compose exec -T backend python manage.py collectstatic --noinput --clear
+            
+            echo "=== Checking services health ==="
+            docker ps
+            curl -I localhost || true
+            
+            echo "✓ Deployment successful! 🚀"
+              
