--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -1,68 +1,27 @@
-# version: '3.8'
-
-# services:
-#   frontend:
-#     image: bestagent/bestagent-elera-frontend:latest
-#     ports:
-#       - "3000:3000"
-#     volumes:
-#       - frontend_build:/app/result_build/
-#     environment:
-#       NODE_ENV: production
-#     restart: always
-
-#   backend:
-#     image: bestagent/bestagent-elera-backend:latest
-#     restart: always
-#     ports:
-#       - "8000:8000"
-#     volumes:
-#       - static_value:/app/backend_static/  # ✅ Верно для статики
-
-#   nginx:
-#     image: nginx:1.21.3-alpine
-#     ports:
-#       - "80:80"
-#       - "443:443"
-#     volumes:
-#       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-#       - frontend_build:/usr/share/nginx/html/
-#       - static_value:/var/html/backend_static/
-#     restart: always
-#     depends_on:
-#       - backend
-#       - frontend
-# volumes:
-#   postgres_data:
-#   frontend_build:
-#   static_value:
-#   media_value:
 version: '3.8'
 
 services:
   frontend:
-    image: ${{ secrets.DOCKER_HUB_USERNAME }}/bestagent-elera-frontend:latest
-    ports:
-      - "3000:3000"
-    volumes:
-      - frontend_build:/app/result_build/
-    environment:
-      NODE_ENV: production
+    image: $DOCKER_HUB_USERNAME/bestagent-elera-frontend:latest
     restart: always
+    environment:
+      - NODE_ENV=production
+    volumes:
+      - ./frontend/build:/app/build
 
   backend:
-    image: ${{ secrets.DOCKER_HUB_USERNAME }}/bestagent-elera-backend:latest
+    image: $DOCKER_HUB_USERNAME/bestagent-elera-backend:latest
     restart: always
-    ports:
-      - "8000:8000"
-    volumes:
-      - static_value:/app/backend_static/
+    command: gunicorn --bind 0.0.0.0:8000 core.wsgi
     environment:
-      DATABASE_URL: postgres://postgre:Restart.1996@db:5432/bestagent-elera  # Замените на свои данные
-      SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+      - DATABASE_URL=postgres://postgre:Restart.1996@db:5432/bestagent-elera
+      - SECRET_KEY=your-secret-key
+    depends_on:
+      - db
 
   db:
     image: postgres:13
+    restart: always
     environment:
       POSTGRES_USER: postgre
       POSTGRES_PASSWORD: Restart.1996
@@ -72,18 +31,16 @@ services:
 
   nginx:
     image: nginx:1.21.3-alpine
+    restart: always
     ports:
       - "80:80"
-      - "443:443"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - frontend_build:/usr/share/nginx/html/
-      - static_value:/var/html/backend_static/
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend/build:/usr/share/nginx/html
+      - ./backend/static:/var/html/static
     depends_on:
-      - backend
       - frontend
+      - backend
 
 volumes:
   postgres_data:
-  frontend_build:
-  static_value:
