--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -3,16 +3,19 @@ server {
     server_name bestagent-elera.ru www.bestagent-elera.ru;
 
     location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
+        root /usr/share/nginx/html;
+        try_files $uri /index.html;
     }
 
-    location /api/ {
+    location /api {
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /static/ {
-        alias /var/html/backend_static/;
+        alias /var/html/static/;
     }
 }
