--- a/.github/workflows/bestagent-elera.yml
+++ b/.github/workflows/bestagent-elera.yml
@@ -104,7 +104,7 @@ jobs:
             docker compose -f $COMPOSE_FILE down || echo "⚠️ No containers to stop"
             
             echo "=== Starting new containers ==="
-            docker compose -f $COMPOSE_FILE up -d --build
+            docker compose -f $COMPOSE_FILE up --build --detach
             
             echo "=== Health checks ==="
             sleep 15
