--- a/.github/workflows/bestagent-elera.yml
+++ b/.github/workflows/bestagent-elera.yml
@@ -114,7 +114,7 @@ jobs:
             docker compose -f $COMPOSE_FILE --env-file $ENV_FILE down || echo "⚠️ No containers to stop"
             
             echo "=== Starting new containers ==="
-            docker compose -f $COMPOSE_FILE --env-file $ENV_FILE up -d
+            docker compose -f $COMPOSE_FILE --env-file $ENV_FILE up --detach
             
             echo "=== Health checks ==="
             sleep 15
