--- a/.github/workflows/bestagent-elera.yml
+++ b/.github/workflows/bestagent-elera.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          username: bestagent
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: Build and push backend
@@ -53,7 +53,7 @@ jobs:
           context: backend
           file: backend/Dockerfile
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/bestagent-elera-backend:latest
+            bestagent/bestagent-elera-backend:latest
           push: true
 
       - name: Build and push frontend
@@ -62,7 +62,7 @@ jobs:
           context: frontend
           file: frontend/Dockerfile
           tags: |
-            ${{ secrets.DOCKER_HUB_USERNAME }}/bestagent-elera-frontend:latest
+            bestagent/bestagent-elera-frontend:latest
           push: true
 
   deploy:
@@ -102,7 +102,7 @@ jobs:
             
             cd $COMPOSE_DIR || exit 1
 
-            echo "DOCKER_HUB_USERNAME=${{ secrets.DOCKER_HUB_USERNAME }}" > .env
+            echo "DOCKER_HUB_USERNAME=bestagent" > .env
             echo "PROJECT_NAME=bestagent-elera" >> .env
             
             echo "=== Building containers ==="
