edit server and delete errs

--- a/infra/.env
+++ b/infra/.env
@@ -2,3 +2,9 @@ POSTGRES_DB=bestagent-elera
 POSTGRES_USER=postgre
 POSTGRES_PASSWORD=Restart.1996
 DATABASE_URL=postgres://postgre:Restart.1996@db:5432/bestagent-elera
+
+DOCKER_HUB_USERNAME=bestagent
+PROJECT_NAME=bestagent-elera
+DJANGO_SECRET_KEY='django-insecure-(hhv0vk4d^2@6!8u9#lrn@5rde)ph71_5mv8wt6)7i)h-wc5=v'
+DEBUG=False
+ALLOWED_HOSTS=bestagent-elera.ru,localhost
