edit server and delete errorsers

--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,21 +1,67 @@
+upstream backend {
+    server backend:8000;
+}
+
 server {
     listen 80;
-    server_name bestagent-elera.ru www.bestagent-elera.ru;
+    server_name 45.84.227.90 bestagent-elera.ru www.bestagent-elera.ru;
+    
+    # Редирект на HTTPS
+    return 301 https://$host$request_uri;
+}
 
+server {
+    listen 443 ssl;
+    server_name 45.84.227.90 bestagent-elera.ru www.bestagent-elera.ru;
+
+    ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+
+    # Frontend
     location / {
         root /usr/share/nginx/html;
-        try_files $uri /index.html;
+        try_files $uri $uri/ /index.html;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
     }
 
+    location / {
+        proxy_pass http://frontend:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+    }
+
+    # Backend API
     location /api {
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend:8000/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Django static files
     location /static/ {
-        alias /var/html/static/;
+        alias /var/html/backend_static/;
+        expires 1y;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    # Frontend static files
+    location /assets/ {
+        alias /usr/share/nginx/html/static/;
+        expires 1y;
+        access_log off;
+        add_header Cache-Control "public";
+    }
+
+    # Ошибки
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
