--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,24 +3,29 @@ version: '3.8'
 services:
   frontend:
     image: bestagent/bestagent-elera-frontend:latest
-    ports:
-      - "3000:3000"
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile.prod
     volumes:
       - frontend_build:/app/result_build/
     environment:
       NODE_ENV: production
     restart: always
+    networks:
+      - app-network
 
   backend:
     image: bestagent/bestagent-elera-backend:latest
     restart: always
-    ports:
-      - "8000:8000"
     volumes:
       - static_value:/app/backend_static/
     environment:
       DATABASE_URL: postgres://postgre:Restart.1996@db:5432/bestagent-elera
       SECRET_KEY: ${DJANGO_SECRET_KEY}
+    depends_on:
+      - db
+    networks:
+      - app-network
 
   db:
     image: postgres:13
@@ -30,21 +35,30 @@ services:
       POSTGRES_DB: bestagent-elera
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - app-network
 
   nginx:
     image: nginx:1.21.3-alpine
     ports:
-      - "8080:80"
+      - "80:80"
       - "443:443"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - frontend_build:/usr/share/nginx/html/
-      - static_value:/var/html/backend_static/
+      - frontend_build:/usr/share/nginx/html
+      - static_value:/var/html/backend_static
+      - ./ssl:/etc/nginx/ssl
     depends_on:
       - backend
       - frontend
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
   frontend_build:
   static_value:
+
+networks:
+  app-network:
+    driver: bridge
