edit server and delete ers

--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -4,7 +4,7 @@ upstream backend {
 
 server {
     listen 80;
-    server_name 45.84.227.90 bestagent-elera.ru www.bestagent-elera.ru;
+    server_name bestagent-elera.ru www.bestagent-elera.ru;
     
     # Редирект на HTTPS
     return 301 https://$host$request_uri;
@@ -12,10 +12,10 @@ server {
 
 server {
     listen 443 ssl;
-    server_name 45.84.227.90 bestagent-elera.ru www.bestagent-elera.ru;
+    server_name bestagent-elera.ru www.bestagent-elera.ru;
 
-    ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/bestagent-elera.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/bestagent-elera.ru/privkey.pem;
 
     # Frontend
     location / {
