--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -47,7 +47,8 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - frontend_build:/usr/share/nginx/html
       - static_value:/var/html/backend_static
-      - ./ssl:/etc/nginx/ssl
+      - /etc/letsencrypt:/etc/letsencrypt:ro  # Подключаем сертификаты
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - backend
       - frontend
