--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -5,8 +5,6 @@ upstream backend {
 server {
     listen 80;
     server_name bestagent-elera.ru www.bestagent-elera.ru;
-    
-    # Редирект на HTTPS
     return 301 https://$host$request_uri;
 }
 
@@ -17,26 +15,16 @@ server {
     ssl_certificate /etc/letsencrypt/live/bestagent-elera.ru/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/bestagent-elera.ru/privkey.pem;
 
-    # Frontend
+    # Frontend static files
     location / {
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
         add_header Cache-Control "no-cache, no-store, must-revalidate";
     }
 
-    location / {
-        proxy_pass http://frontend:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-    }
-
     # Backend API
     location /api {
-        proxy_pass http://backend:8000/api/;
+        proxy_pass http://backend;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -51,15 +39,7 @@ server {
         add_header Cache-Control "public";
     }
 
-    # Frontend static files
-    location /assets/ {
-        alias /usr/share/nginx/html/static/;
-        expires 1y;
-        access_log off;
-        add_header Cache-Control "public";
-    }
-
-    # Ошибки
+    # Error pages
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
