--- a/infra/.env
+++ b/infra/.env
@@ -6,4 +6,4 @@ DOCKER_HUB_USERNAME=bestagent
 PROJECT_NAME=bestagent-elera
 DJANGO_SECRET_KEY='django-insecure-(hhv0vk4d^2@6!8u9#lrn@5rde)ph71_5mv8wt6)7i)h-wc5=v'
 DEBUG=False
-ALLOWED_HOSTS=bestagent-elera.ru,localhost
+ALLOWED_HOSTS=ergeshevarealty,localhost
