--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -4,18 +4,32 @@ upstream backend {
 
 server {
     listen 80;
-    server_name bestagent-elera.ru www.bestagent-elera.ru;
+    server_name ergeshevarealty.ru www.ergeshevarealty.ru;
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name bestagent-elera.ru www.bestagent-elera.ru;
+    server_name ergeshevarealty.ru www.ergeshevarealty.ru;
 
-    ssl_certificate /etc/letsencrypt/live/bestagent-elera.ru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/bestagent-elera.ru/privkey.pem;
+    # SSL конфигурация
+    ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384";
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    ssl_stapling on;
+    ssl_stapling_verify on;
 
-    # Frontend static files
+    # HSTS (обязательно для безопасности)
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+    add_header X-Frame-Options DENY;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-XSS-Protection "1; mode=block";
+
+    # Frontend
     location / {
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
@@ -31,7 +45,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Django static files
+    # Статика Django
     location /static/ {
         alias /var/html/backend_static/;
         expires 1y;
@@ -39,7 +53,13 @@ server {
         add_header Cache-Control "public";
     }
 
-    # Error pages
+    # Let's Encrypt ACME challenge
+    location ^~ /.well-known/acme-challenge/ {
+        root /var/www/html;
+        default_type "text/plain";
+    }
+
+    # Ошибки
     error_page 500 502 503 504 /50x.html;
     location = /50x.html {
         root /usr/share/nginx/html;
