--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -47,8 +47,8 @@ server {
     }
 
     # Статика Django
-    location /backend_static/ {
-        root /var/html/;
+    location /static/ {
+        root /var/html/static/;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
