--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
 # Базовый образ Python
 FROM python:3.9-slim
 
+# Установка необходимых системных пакетов
 RUN apt-get update && apt-get install -y \
     build-essential \
     libpq-dev \
@@ -9,10 +10,12 @@ RUN apt-get update && apt-get install -y \
 # Рабочая директория
 WORKDIR /app
 
+# Копирование файла зависимостей
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Копирование всего проекта
 COPY . .
 
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+# Команда для запуска приложения с помощью gunicorn
+CMD ["gunicorn", "--bind", "0.0.0.0:8000", "real_estate_app.wsgi:application"]
