--- a/.github/workflows/bestagent-elera.yml
+++ b/.github/workflows/bestagent-elera.yml
@@ -1,131 +1,19 @@
-name: Bestagent-Elera Deployment Pipeline
+name: Deploy to Server
 
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:
-
-env:
-  PROJECT_NAME: bestagent-elera
-  DOMAIN: ergeshevarealty.ru
 
 jobs:
-  tests:
-    name: Run Tests and Linting
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          pip install -r backend/requirements.txt
-          pip install flake8
-
-      - name: Run linting
-        run: |
-          flake8 backend/
-
-  build_and_push_to_docker_hub:
-    name: Build and Push Docker Images
-    runs-on: ubuntu-latest
-    needs: tests
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: bestagent
-          password: ${{ secrets.DOCKER_HUB_TOKEN }}
-
-      - name: Build and push backend
-        uses: docker/build-push-action@v4
-        with:
-          context: backend
-          file: backend/Dockerfile
-          tags: |
-            bestagent/bestagent-elera-backend:latest
-          push: true
-
-      - name: Build and push frontend
-        uses: docker/build-push-action@v4
-        with:
-          context: frontend
-          file: frontend/Dockerfile
-          tags: |
-            bestagent/bestagent-elera-frontend:latest
-          push: true
-
   deploy:
-    name: Deploy to Production
-    needs: build_and_push_to_docker_hub
     runs-on: ubuntu-latest
     steps:
-      - name: SSH Deployment
-        uses: appleboy/ssh-action@v1
+      - name: SSH Deploy
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.BEGET_HOST }}
           username: ${{ secrets.BEGET_USERNAME }}
           password: ${{ secrets.BEGET_PASSWORD }}
           script: |
-            set -ex
-            echo "=== Starting deployment ==="
-            
-            # Абсолютный путь к папке проекта
-            PROJECT_DIR="/root/PROJECT_ELERA"
-            COMPOSE_DIR="$PROJECT_DIR/infra"
-            COMPOSE_FILE="$COMPOSE_DIR/docker-compose.yml"
-            ENV_FILE="$COMPOSE_DIR/.env"
-            
-            echo "=== Verifying paths ==="
-            echo "Project dir: $PROJECT_DIR"
-            echo "Compose dir: $COMPOSE_DIR"
-            echo "Compose file: $COMPOSE_FILE"
-            
-            echo "=== Checking directory structure ==="
-            ls -la $PROJECT_DIR || { echo "❌ Project directory not found"; exit 1; }
-            ls -la $COMPOSE_DIR || { echo "❌ Compose directory not found"; exit 1; }
-            test -f $COMPOSE_FILE || { echo "❌ Compose file not found"; exit 1; }
-            
-            echo "=== Docker system info ==="
-            docker version
-            docker compose version
-            
-            cd $COMPOSE_DIR || exit 1
-
-            echo "DOCKER_HUB_USERNAME=bestagent" > .env
-            echo "PROJECT_NAME=bestagent-elera" >> .env
-            
-            echo "=== Building containers ==="
-            docker compose -f $COMPOSE_FILE build
-
-            echo "=== Pulling images ==="
-            docker compose -f $COMPOSE_FILE --env-file $ENV_FILE pull || echo "⚠️ Image pull completed with warnings"
-            
-            echo "=== Stopping old containers ==="
-            docker compose -f $COMPOSE_FILE --env-file $ENV_FILE down || echo "⚠️ No containers to stop"
-            
-            echo "=== Starting new containers ==="
-            docker compose -f $COMPOSE_FILE --env-file $ENV_FILE up --detach
-            
-            echo "=== Health checks ==="
-            sleep 15
-            docker compose -f $COMPOSE_FILE ps
-            docker compose -f $COMPOSE_FILE logs --tail=20
-            
-            echo "=== Applying migrations ==="
-            docker compose -f $COMPOSE_FILE exec backend python manage.py migrate --noinput || echo "⚠️ Migrations failed"
-            
-            echo "=== Collecting static files ==="
-            docker compose -f $COMPOSE_FILE exec backend python manage.py collectstatic --noinput --clear || echo "⚠️ Static collection failed"
-            
-            echo "✅ Deployment completed successfully!"
+            cd ~/PROJECT_ELERA/
+            git pull origin main
