--- a/infra/.env
+++ b/infra/.env
@@ -1,9 +1,20 @@
-POSTGRES_DB=bestagent-elera
-POSTGRES_USER=postgre
-POSTGRES_PASSWORD=Restart.1996
-DATABASE_URL=postgres://postgre:Restart.1996@db:5432/bestagent-elera
-DOCKER_HUB_USERNAME=bestagent
-PROJECT_NAME=bestagent-elera
-DJANGO_SECRET_KEY='django-insecure-(hhv0vk4d^2@6!8u9#lrn@5rde)ph71_5mv8wt6)7i)h-wc5=v'
+# Django settings
 DEBUG=False
-ALLOWED_HOSTS=ergeshevarealty,localhost
+SECRET_KEY='django-insecure-(hhv0vk4d^2@6!8u9#lrn@5rde)ph71_5mv8wt6)7i)h-wc5=v'
+ALLOWED_HOSTS=ergeshevarealty.ru,www.ergeshevarealty.ru,localhost,127.0.0.1
+
+# Database
+DB_ENGINE=django.db.backends.postgresql
+DB_NAME=bestagent-elera
+DB_USER=postgre
+DB_PASSWORD=Restart.1996
+DB_HOST=localhost
+DB_PORT=5432
+
+# Email
+EMAIL_HOST=smtp.beget.com
+EMAIL_PORT=465
+EMAIL_HOST_USER=bestagent-elera@bestagent-elera.ru
+EMAIL_HOST_PASSWORD=Restart.1996!
+EMAIL_USE_SSL=True
+DEFAULT_FROM_EMAIL=bestagent-elera@bestagent-elera.ru
