--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
     "name": "my-app",
     "version": "0.1.0",
-    "proxy": "http://backend:8000",
+    "proxy": "http://45.153.191.8:8000",
     "private": true,
     "dependencies": {
       "canvas-confetti": "^1.9.3",
