add new filesed

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,17 @@
 {
     "name": "my-app",
     "version": "0.1.0",
-    "proxy": "http://45.153.191.8:8000",
+    "proxy": {
+      "/api": {
+        "target": "http://45.153.191.8:8000",
+        "changeOrigin": true
+      },
+      "/ws": {
+        "target": "ws://45.153.191.8:8000",
+        "ws": true,
+        "changeOrigin": true
+      }
+    },
     "private": true,
     "dependencies": {
       "canvas-confetti": "^1.9.3",
