--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -6,6 +6,7 @@ server {
 
 server {
     listen 443 ssl http2;
+    listen [::]:443 ssl http2;
     server_name ergeshevarealty.ru www.ergeshevarealty.ru;
 
     # SSL certificates (убедитесь что пути верные)
@@ -47,6 +48,7 @@ server {
     # Frontend React app
     location / {
         proxy_pass http://127.0.0.1:3000;
+        proxy_set_header Host $host;
         proxy_http_version 1.1;
 
         add_header 'Access-Control-Allow-Origin' '*';
