--- a/.github/workflows/bestagent-elera.yml
+++ b/.github/workflows/bestagent-elera.yml
@@ -16,36 +16,4 @@ jobs:
           password: ${{ secrets.BEGET_PASSWORD }}
           script: |
             cd ~/PROJECT_ELERA/
-            
-            # 2. Обновляем код
-            echo "=== Обновляем код ==="
-            git fetch origin
-            git reset --hard origin/main
-            
-            # 3. Бэкенд (Django)
-            echo "=== Обрабатываем бэкенд ==="
-            cd ~/PROJECT_ELERA/backend/
-            source venv/bin/activate  # Активируем виртуальное окружение
-            pip install -r requirements.txt
-            python manage.py migrate
-            python manage.py collectstatic --noinput
-            
-            # 4. Фронтенд (React)
-            echo "=== Собираем фронтенд ==="
-            cd ~/PROJECT_ELERA/frontend/
-            npm install
-            npm run build
-            cd ~
-            
-            # 5. Перезапускаем сервисы
-            echo "=== Перезапускаем сервисы ==="
-            sudo systemctl restart gunicorn
-            sudo systemctl restart nginx
-            pm2 restart all
-            
-            # 6. Проверяем статус
-            echo "=== Статус сервисов ==="
-            sudo systemctl status gunicorn
-            sudo systemctl status nginx
-            
-            echo "🚀 Деплой успешно завершен!"
+            git pull origin main
