--- a/frontend/.env
+++ b/frontend/.env
@@ -2,9 +2,8 @@ DANGEROUSLY_DISABLE_HOST_CHECK=true
 HOST=0.0.0.0
 PORT=3000
 BROWSER=none
-DANGEROUSLY_DISABLE_HOST_CHECK=true
-PUBLIC_URL=http://45.153.191.8:3000
-WDS_SOCKET_PORT=0
 HTTPS=true
-REACT_APP_API = https://ergeshevarealty.ru/api/
-REACT_APP_HOST = https://ergeshevarealty.ru/
+PUBLIC_URL=/
+REACT_APP_API=https://ergeshevarealty.ru/api/
+REACT_APP_HOST=https://ergeshevarealty.ru/
+WDS_SOCKET_PORT=0
