--- a/frontend/.env
+++ b/frontend/.env
@@ -2,7 +2,7 @@ DANGEROUSLY_DISABLE_HOST_CHECK=true
 HOST=0.0.0.0
 PORT=3000
 BROWSER=none
-PUBLIC_URL=https://45.153.191.8:3000
+PUBLIC_URL=http://45.153.191.8:3000
 WDS_SOCKET_PORT=0
 HTTPS=true
 REACT_APP_API = https://ergeshevarealty.ru/api/
