--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -10,8 +10,8 @@ server {
     server_name ergeshevarealty.ru www.ergeshevarealty.ru;
 
     # SSL certificates (убедитесь что пути верные)
-    ssl_certificate /root/PROJECT_ELERA/infra/nginx/certs/fullchain.pem;
-    ssl_certificate_key /root/PROJECT_ELERA/infra/nginx/certs/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/ergeshevarealty.ru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/ergeshevarealty.ru/privkey.pem;
 
     # SSL settings
     ssl_protocols TLSv1.2 TLSv1.3;
